# ComfyUI_Pops

./: ComfyUI_Pops.py  README.md  __init__.py  pyproject.toml  requirements.txt
data_generation/: generate_scenes_data.py  generate_texture_data.py  generate_union_data.py  remove_backs.py  words_bank.py
example/: controlnet.json  ip.json  texture.json  unetworkflow.json  usingebm.json  usingmean.json  workflow.json
kandinsky2/: __init__.py  configs.py  kandinsky2_1_model.py  kandinsky2_2_model.py  kandinsky2_model.py  utils.py
kandinsky2/model/: gaussian_diffusion.py  losses.py  model_creation.py  nn.py  prior.py  resample.py  respace.py  samplers.py  text2im_model.py  text2im_model2_1.py  text_encoders.py  unet.py  utils.py
kandinsky2/train_utils/: ema.py  train_module_pl2_1.py  trainer_2_1_uclip.py  trainer_prior.py  utils.py
kandinsky2/train_utils/data/: dataset_unclip_2_1.py
kandinsky2/vqgan/: movq_modules.py  quntize.py  vqgan_blocks.py
model/: pipeline_pops.py  pops_utils.py
scripts/: coach.py  dataset.py  train_config.py
utils/: clothes_utils.py  vis_utils.py
