[project]
name = "comfyui_pops"
description = "a node using pops in comfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = ["pyrallis"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Pops"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemx"
DisplayName = "ComfyUI_Pops"
Icon = ""
